# aktualizr-nano

./: .gitignore  .gitmodules  LICENSE  README.md  aknano_file_paths.cmake  middleware_aktualizr-nano.cmake  middleware_aktualizr-nano_el2go.cmake  middleware_aktualizr-nano_provisioning.cmake  middleware_aktualizr-nano_tests.cmake  uncrustify.cfg
.github/workflows/: cmake.yml
src/: aknano.c  aknano.h  aknano_api.c  aknano_board.h  aknano_client.h  aknano_debug.h  aknano_device_gateway.c  aknano_device_gateway.h  aknano_el2go.c  aknano_el2go.h  aknano_flash_storage.c  aknano_flash_storage.h  aknano_image_download.c  aknano_image_download.h  aknano_net.c  aknano_net.h  aknano_pkcs11.c  aknano_pkcs11.h  aknano_priv.h  aknano_public_api.h  aknano_rest_api.c  aknano_secret.h  aknano_targets_manifest.c  aknano_targets_manifest.h  aknano_tuf_client.c  aknano_tuf_client.h  libtufnano_config.h
src/platform/linux_tests/: aknano_compat_platform.h  aknano_debug.h  aknano_debug_platform.h  aknano_flash_storage.c  aknano_net.c  aknano_net_platform.h  aknano_platform.c  aknano_platform.h
src/platform/mcuxsdk/: aknano_board.c  aknano_compat_platform.h  aknano_debug.c  aknano_debug_platform.h  aknano_el2go.c  aknano_flash_storage.c  aknano_flash_storage.h  aknano_net.c  aknano_net_platform.h  aknano_pkcs11.c  aknano_pkcs11.h  aknano_platform.c  aknano_platform.h  aknano_rest_api.c  aknano_rest_api.h
src/provisioning/: aknano_provisioning.c  aknano_provisioning.h  aknano_provisioning_mbedtls.c  aknano_provisioning_secret.h
test/: CMakeLists.txt  aknano_test.c  unity_config.h
test/unit-test/: CMakeLists.txt  aknano_utest.c  libtufnano_client.cmake  test_file_signed_fw_4000.c
tests/: CMakeLists.txt  aknano_test.c
tests/aknano_test_client/: aknano_client.c
tests/unit-test/: CMakeLists.txt  aknano_utest.c
tools/cmock/: project.yml
